--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "mongoose": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
