--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "mongoose": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
